visualmente todas as telas de auth feitas, e terminando integração de criar usuário pois ta com problema na hora de converter em base64 pois está muito pesado e demorando a requisição

--- a/Views/Auth/ForgotPasswordView.xaml
+++ b/Views/Auth/ForgotPasswordView.xaml
@@ -1,12 +1,171 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="tcc_mypet_app.Views.Auth.ForgotPasswordView"
-             Title="ForgotPasswordView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage
+    x:Class="tcc_mypet_app.Views.Auth.ForgotPasswordView"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="ForgotPasswordView">
+    <ScrollView>
+        <Grid>
+            <VerticalStackLayout
+                Padding="20"
+                BackgroundColor="White"
+                IsVisible="{Binding Email}">
+                <Image
+                    Margin="0,40,0,40"
+                    HeightRequest="100"
+                    HorizontalOptions="Center"
+                    Source="titlemypet.png"
+                    WidthRequest="280" />
+
+                <Label
+                    Margin="0,7,0,0"
+                    FontFamily="PoppinsRegular"
+                    FontSize="15"
+                    HorizontalOptions="Center"
+                    Text="Digite a conta associada ao seu email"
+                    TextColor="#636363" />
+
+                <Border Margin="0,30,0,0">
+                    <Entry
+                        x:Name="EntryEmail"
+                        Margin="5,0,5,0"
+                        FontFamily="PoppinsRegular"
+                        HeightRequest="55"
+                        Keyboard="Text"
+                        Placeholder="ex: Joaocarlos@gmail.com"
+                        TextColor="Black" />
+                </Border>
+                <Button
+                    Margin="0,30,0,0"
+                    Padding="15"
+                    BackgroundColor="#FF8A00"
+                    Clicked="OnProxButtonClicked"
+                    CornerRadius="10"
+                    FontFamily="PoppinsRegular"
+                    FontSize="16"
+                    Text="proximo"
+                    TextColor="White" />
+            </VerticalStackLayout>
+            <VerticalStackLayout
+                Padding="20"
+                BackgroundColor="White"
+                IsVisible="{Binding Codigo}">
+                <Image
+                    Margin="0,40,0,40"
+                    HeightRequest="100"
+                    HorizontalOptions="Center"
+                    Source="titlemypet.png"
+                    WidthRequest="280" />
+
+                <Label
+                    Margin="0,7,0,0"
+                    FontFamily="PoppinsRegular"
+                    FontSize="15"
+                    HorizontalOptions="Center"
+                    Text=" "
+                    TextColor="#636363" />
+                <Label
+                    FontFamily="PoppinsRegular"
+                    FontSize="18"
+                    HorizontalOptions="Center"
+                    HorizontalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="Digite o código que enviamos para o Número " TextColor="#636363" />
+                            <Span Text="+55 21 972853252" TextColor="#0060FF" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+
+                <HorizontalStackLayout
+                    Margin="0,20,0,0"
+                    HorizontalOptions="Center"
+                    Spacing="6">
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry1"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnCommandParameter="CodeEntry2"
+                            ReturnType="Next"
+                            StyleId="CodeEntry1"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry2"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnCommandParameter="CodeEntry3"
+                            ReturnType="Next"
+                            StyleId="CodeEntry2"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry3"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnCommandParameter="CodeEntry4"
+                            ReturnType="Next"
+                            StyleId="CodeEntry3"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry4"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnCommandParameter="CodeEntry5"
+                            ReturnType="Next"
+                            StyleId="CodeEntry4"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry5"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnCommandParameter="CodeEntry6"
+                            ReturnType="Next"
+                            StyleId="CodeEntry5"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                    <Border Margin="0,10,0,0">
+                        <Entry
+                            x:Name="CodeEntry6"
+                            HorizontalTextAlignment="Center"
+                            Keyboard="Numeric"
+                            MaxLength="1"
+                            ReturnType="Done"
+                            TextChanged="OnCodeEntryTextChanged"
+                            WidthRequest="50" />
+                    </Border>
+                </HorizontalStackLayout>
+
+
+                <Button
+                    Margin="0,30,0,0"
+                    Padding="15"
+                    BackgroundColor="#FF8A00"
+                    Clicked="OnProxButtonClicked"
+                    CornerRadius="10"
+                    FontFamily="PoppinsRegular"
+                    FontSize="16"
+                    Text="proximo"
+                    TextColor="White" />
+
+            </VerticalStackLayout>
+        </Grid>
+    </ScrollView>
 </ContentPage>
