--- a/Views/Auth/CreateUserView.xaml
+++ b/Views/Auth/CreateUserView.xaml
@@ -24,10 +24,10 @@
 
             <Border Margin="0,10,0,0">
                 <Entry
-                    x:Name="EntryLogin"
+                    x:Name="EntryNome"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     Keyboard="Text"
                     Placeholder="Ex: nome"
                     TextColor="Black" />
@@ -45,7 +45,7 @@
                     x:Name="EntryEmail"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     Keyboard="Email"
                     Placeholder="Ex: email@example.com"
                     TextColor="Black" />
@@ -64,7 +64,7 @@
                     x:Name="EntryPassword"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     IsPassword="True"
                     Keyboard="Numeric"
                     Placeholder="Ex: senha"
@@ -84,7 +84,7 @@
                     x:Name="EntryCellphone"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     Keyboard="Telephone"
                     Placeholder="Ex: (11) 98765-4321"
                     TextColor="Black" />
@@ -103,10 +103,11 @@
                     x:Name="EntryZipCode"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
-                    IsEnabled="False"
+                    HeightRequest="55"
                     Keyboard="Numeric"
+                    MaxLength="8"
                     Placeholder="Ex: 12345-678"
+                    TextChanged="OnZipCodeTextChanged"
                     TextColor="Black" />
             </Border>
 
@@ -124,7 +125,7 @@
                     x:Name="EntryStreet"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     IsEnabled="False"
                     Keyboard="Text"
                     Placeholder="Ex: Rua das Flores"
@@ -144,7 +145,7 @@
                     x:Name="EntryState"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     IsEnabled="False"
                     Keyboard="Text"
                     Placeholder="Ex: SP"
@@ -164,7 +165,7 @@
                     x:Name="EntryCity"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     IsEnabled="False"
                     Keyboard="Text"
                     Placeholder="Ex: São Paulo"
@@ -184,16 +185,24 @@
                     x:Name="EntryNumber"
                     Margin="5,0,5,0"
                     FontFamily="PoppinsRegular"
-                    HeightRequest="20"
+                    HeightRequest="55"
                     Keyboard="Numeric"
                     Placeholder="Ex: 123"
                     TextColor="Black" />
             </Border>
 
             <Button
+                Clicked="OnAddImageButtonClicked"
+                Command="{Binding AddImageCommand}"
+                HeightRequest="50"
+                Text="Adicionar Imagem"
+                WidthRequest="200" />
+
+            <Button
                 Margin="10,30"
                 Padding="15"
                 BackgroundColor="#FF8A00"
+                Clicked="OnCreateButtonClicked"
                 CornerRadius="12"
                 FontFamily="PoppinsRegular"
                 FontSize="22"
