--- a/Views/Auth/HomeView.xaml
+++ b/Views/Auth/HomeView.xaml
@@ -2,19 +2,20 @@
 <ContentPage
     x:Class="tcc_mypet_app.Views.Auth.HomeView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    NavigationPage.HasNavigationBar="False">
 
     <VerticalStackLayout Padding="20" BackgroundColor="White">
 
         <Image
-            Margin="0,50"
+            Margin="0,60"
             HeightRequest="250"
             HorizontalOptions="Center"
             Source="paws.png"
             WidthRequest="240" />
 
         <Label
-            Margin="0,0,0,50"
+            Margin="0,40,0,100"
             FontSize="26"
             HorizontalOptions="Center"
             HorizontalTextAlignment="Start"
@@ -35,7 +36,7 @@
             BackgroundColor="Orange"
             Clicked="OnStartButtonClicked"
             CornerRadius="15"
-            HeightRequest="50"
+            HeightRequest="60"
             Text="Começar"
             TextColor="White" />
 
