telas de criar mandando imagem para o firebase e  editando, telas de views

--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -401,4 +401,7 @@
         <Setter Property="Shell.TabBarUnselectedColor" Value="#5F5F5F" />
         <Setter Property="Shell.TabBarTitleColor" Value="Black" />
     </Style>
+    <Style TargetType="ContentPage">
+        <Setter Property="NavigationPage.HasNavigationBar" Value="False" />
+    </Style>
 </ResourceDictionary>
