--- a/Views/Auth/ForgotPasswordView.xaml
+++ b/Views/Auth/ForgotPasswordView.xaml
@@ -3,7 +3,8 @@
     x:Class="tcc_mypet_app.Views.Auth.ForgotPasswordView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="ForgotPasswordView">
+    Title="ForgotPasswordView"
+    NavigationPage.HasNavigationBar="False">
     <ScrollView>
         <Grid>
             <VerticalStackLayout
@@ -72,7 +73,10 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="Digite o código que enviamos para o Número " TextColor="#636363" />
-                            <Span Text="+55 21 972853252" TextColor="#0060FF" />
+                            <Span
+                                x:Name="PhoneSpan"
+                                Text="+55 21 972853252"
+                                TextColor="#0060FF" />
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
@@ -155,6 +159,7 @@
 
 
                 <Button
+                    x:Name="buttonCodigo"
                     Margin="0,30,0,0"
                     Padding="15"
                     BackgroundColor="#FF8A00"
@@ -163,6 +168,75 @@
                     FontFamily="PoppinsRegular"
                     FontSize="16"
                     Text="proximo"
+                    TextColor="White" />
+
+            </VerticalStackLayout>
+            <VerticalStackLayout
+                Padding="20"
+                BackgroundColor="White"
+                IsVisible="{Binding Senha}">
+                <Image
+                    Margin="0,60,0,40"
+                    HeightRequest="100"
+                    HorizontalOptions="Center"
+                    Source="titlemypet.png"
+                    WidthRequest="280" />
+
+                <Label
+                    Margin="0,7,0,0"
+                    FontFamily="PoppinsRegular"
+                    FontSize="15"
+                    HorizontalOptions="Center"
+                    Text=" "
+                    TextColor="#636363" />
+
+                <Label
+                    Margin="0,7,0,0"
+                    FontFamily="PoppinsRegular"
+                    FontSize="15"
+                    HorizontalOptions="Start"
+                    HorizontalTextAlignment="Start"
+                    Text="Senha"
+                    TextColor="#636363" />
+
+                <Border Margin="0,0,0,0">
+                    <Entry
+                        x:Name="EntrySenha"
+                        Margin="5,0,5,0"
+                        FontFamily="PoppinsRegular"
+                        HeightRequest="55"
+                        Keyboard="Text"
+                        Placeholder="ex: Senha123"
+                        TextColor="Black" />
+                </Border>
+                <Label
+                    Margin="0,7,0,0"
+                    FontFamily="PoppinsRegular"
+                    FontSize="15"
+                    HorizontalOptions="Start"
+                    HorizontalTextAlignment="Start"
+                    Text="Confirmar Senha"
+                    TextColor="#636363" />
+                <Border Margin="0,0,0,0">
+                    <Entry
+                        x:Name="EntryConfirmPassword"
+                        Margin="5,0,5,0"
+                        FontFamily="PoppinsRegular"
+                        HeightRequest="55"
+                        Keyboard="Text"
+                        Placeholder="ex: Senha123"
+                        TextColor="Black" />
+                </Border>
+
+                <Button
+                    Margin="0,30,0,0"
+                    Padding="15"
+                    BackgroundColor="#FF8A00"
+                    Clicked="OnProxButtonClicked"
+                    CornerRadius="10"
+                    FontFamily="PoppinsRegular"
+                    FontSize="16"
+                    Text="Atualizar Senha"
                     TextColor="White" />
 
             </VerticalStackLayout>
