--- a/Views/Auth/LoginView.xaml
+++ b/Views/Auth/LoginView.xaml
@@ -2,7 +2,8 @@
 <ContentPage
     x:Class="tcc_mypet_app.Views.Auth.LoginView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    NavigationPage.HasNavigationBar="False">
     <ScrollView>
         <VerticalStackLayout Padding="20" BackgroundColor="White">
             <Image
@@ -70,6 +71,7 @@
                 Margin="10,30"
                 Padding="15"
                 BackgroundColor="#FF8A00"
+                Clicked="OnLoginButtonClicked"
                 CornerRadius="12"
                 FontFamily="PoppinsBold"
                 FontSize="22"
