--- a/Views/App/PetView.xaml
+++ b/Views/App/PetView.xaml
@@ -3,7 +3,7 @@
     x:Class="tcc_mypet_app.Views.App.PetView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="PetView">
+    NavigationPage.HasNavigationBar="False">
     <ScrollView>
         <VerticalStackLayout Padding="15">
             <Grid Margin="0,30,0,40">
